Fix alignment problem.
The layout.css files provide by the Exhibit Builder plugin are
now being loaded in (see commit
062f88c15205a3a1b5b680aef54ecc76826f2747).
This newly-loaded css create an alignment issue. This commit
fixes this alignment issue.

--- a/css/screen.css
+++ b/css/screen.css
@@ -550,6 +550,7 @@ p.copyright-footer a {
   width: 200px;
   padding: 5px;
   margin-bottom: 2%;
+  margin-right: inherit;
 }
 
 .layout-file-text .exhibit-items.right.thumbnail {
